# 2026Dian-git

./: README.md  mnist_model.espdl
I2S/main/: main.c
main/: CMakeLists.txt  comm_protocol.cpp  comm_protocol.hpp  idf_component.yml  main.c  main.cpp  minimp3.h  mnist_infer.cpp  mnist_infer.hpp
usart/: CMakeLists.txt
usart/main/: main.c
wb2812/: CMakeLists.txt
wb2812/main/: idf_component.yml  main.c
wifi station/: CMakeLists.txt  sdkconfig
wifi station/main/: CMakeLists.txt  main.c
